[package]
name = "mujoco-rs"
version = "2.3.0+mj-3.3.7"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high-level Rust wrapper around the MuJoCo C library, with a native viewer (re-)written in Rust."
readme = "README.md"
repository = "https://github.com/davidhozic/mujoco-rs"
keywords = ["MuJoCo", "Viewer", "Bindings", "Wrapper"]
categories = ["simulation", "science::robotics", "api-bindings"]
homepage = "https://crates.io/crates/mujoco-rs"
documentation = "https://docs.rs/mujoco-rs/"
rust-version = "1.88"

exclude = [".gitignore", ".gitmodules", "mujoco/*", "docs/"]

[package.metadata.docs.rs]
all-features = true


[features]
viewer = ["dep:bitflags", "dep:glutin", "dep:winit", "dep:glutin-winit"]
viewer-ui = ["viewer", "dep:egui-winit", "dep:egui_glow", "dep:egui"]
renderer = ["dep:bitflags", "dep:glutin", "dep:png"]
renderer-winit-fallback = ["renderer", "dep:winit", "dep:glutin-winit"]
cpp-viewer = []

ffi-regenerate = ["dep:regex", "dep:bindgen"]  # Generate the ffi bindings. Only used for updating the committed ``mujoco_c`` module. 

auto-download-mujoco = ["dep:ureq", "dep:flate2", "dep:tar", "dep:zip", "dep:sha2"]

default = ["viewer", "viewer-ui", "renderer", "renderer-winit-fallback"]

[dependencies]
bitflags = {version = "2.9.4", optional = true}
png = {version = "0.18.0", optional = true}
paste = "1.0.15"
bytemuck = "1.24.0"

# Rendering dependencies
glutin = {version = "0.32.3", optional = true}
winit = {version = "0.30.12", optional = true}
glutin-winit = {version = "0.5.0", optional = true}
# Viewer's user interface dependencies
egui-winit = {version = "0.33.0", default-features = false, features = ["wayland", "x11"], optional = true}
egui_glow = {version = "0.33.0", features = ["x11", "winit", "wayland", "egui-winit"], optional = true}
egui = {version = "0.33.0", optional = true}

[build-dependencies]
bindgen = {version = "0.71.1", optional = true}
regex = {version = "1.11.2", optional = true}

# Automatic download dependencies
ureq = {version = "3.1.4", optional = true}
sha2 = {version = "0.10.9", optional = true}

[target.'cfg(target_os = "linux")'.build-dependencies]
flate2 = {version = "1.1.5", optional = true}
tar = {version = "0.4.44", optional = true}

[target.'cfg(target_os = "windows")'.build-dependencies]
zip = {version = "6.0.0", default-features = false, features = ["deflate"], optional = true}

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
rand = "0.9.2"
