[package]
name = "mujoco-rs"
version = "3.0.1+mj-3.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high-level Rust wrapper around the MuJoCo C library, with a native viewer (re-)written in Rust."
readme = "README.md"
repository = "https://github.com/davidhozic/mujoco-rs"
keywords = ["MuJoCo", "Viewer", "Bindings", "Wrapper"]
categories = ["simulation", "science::robotics", "api-bindings"]
homepage = "https://crates.io/crates/mujoco-rs"
documentation = "https://docs.rs/mujoco-rs/"
rust-version = "1.88"

exclude = [
    ".context/",
    ".github/",
    ".gitignore",
    ".gitmodules",
    ".readthedocs.yaml",
    ".vscode/",
    "__pycache__/",
    "docs/",
    "Dockerfile.ubuntu",
    "MUJOCO_LOG.TXT",
    "mujoco/*",
    "scripts/",
    "tests/",
]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"

[[example]]
name = "stl_mesh"

[[example]]
name = "model_parameters"

[[example]]
name = "cpp_viewer"
required-features = ["cpp-viewer"]

[[example]]
name = "chaotic_pendulum"
required-features = ["viewer"]

[[example]]
name = "contact_forces"
required-features = ["renderer"]

[[example]]
name = "custom_ui_widgets"
required-features = ["viewer-ui"]

[[example]]
name = "drawing_scene_renderer"
required-features = ["renderer"]

[[example]]
name = "drawing_scene_viewer"
required-features = ["viewer"]

[[example]]
name = "ffi_attributes"
required-features = ["viewer"]

[[example]]
name = "joint_view"
required-features = ["viewer"]

[[example]]
name = "miri_test"
required-features = ["renderer"]

[[example]]
name = "model_editing"
required-features = ["viewer"]

[[example]]
name = "model_switch"
required-features = ["viewer"]

[[example]]
name = "multi_legged_creatures"
required-features = ["viewer"]

[[example]]
name = "procedural_tree"
required-features = ["viewer"]

[[example]]
name = "renderer"
required-features = ["renderer"]

[[example]]
name = "rust_viewer"
required-features = ["viewer-ui"]

[[example]]
name = "rust_viewer_threaded"
required-features = ["viewer"]

[[example]]
name = "tendon"
required-features = ["viewer"]

[[example]]
name = "terrain_generation"
required-features = ["viewer"]

[[example]]
name = "tippe_top"
required-features = ["viewer"]

[[example]]
name = "touch_sensor"
required-features = ["viewer"]


[features]
viewer = ["dep:bitflags", "dep:glutin", "dep:winit", "dep:glutin-winit", "dep:png"]
viewer-ui = ["viewer", "dep:egui-winit", "dep:egui_glow", "dep:egui"]
renderer = ["dep:bitflags", "dep:glutin", "dep:png"]
renderer-winit-fallback = ["renderer", "dep:winit", "dep:glutin-winit"]
cpp-viewer = []

ffi-regenerate = ["dep:regex", "dep:bindgen"]  # Generate the ffi bindings. Only used for updating the committed ``mujoco_c`` module.

auto-download-mujoco = ["dep:ureq", "dep:flate2", "dep:tar", "dep:zip", "dep:sha2"]

default = []

[dependencies]
bitflags = {version = "2.9.4", optional = true}
png = {version = "0.18.0", optional = true}
paste = "1.0.15"
bytemuck = {version = "1.24.0", features = ["min_const_generics"]}

# Rendering dependencies
glutin = {version = "0.32.3", optional = true}
winit = {version = "0.30.12", optional = true}
glutin-winit = {version = "0.5.0", optional = true}
# Viewer's user interface dependencies
egui-winit = {version = "0.33.0", default-features = false, features = ["wayland", "x11"], optional = true}
egui_glow = {version = "0.33.0", features = ["x11", "winit", "wayland", "egui-winit"], optional = true}
egui = {version = "0.33.0", optional = true}

[build-dependencies]
bindgen = {version = "0.71.1", optional = true}
regex = {version = "1.11.2", optional = true}

# Automatic download dependencies
ureq = {version = "3.1.4", optional = true}
sha2 = {version = "0.10.9", optional = true}

[target.'cfg(target_os = "linux")'.build-dependencies]
flate2 = {version = "1.1.5", optional = true}
tar = {version = "0.4.44", optional = true}

[target.'cfg(target_os = "windows")'.build-dependencies]
zip = {version = "6.0.0", default-features = false, features = ["deflate"], optional = true}

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
rand = "0.9.2"

[lints.clippy]
unnecessary_lazy_evaluations = "allow"
