[workspace]
members = ["mujoco-rs-derive"]

[workspace.package]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/davidhozic/mujoco-rs"
rust-version = "1.88"

[workspace.lints.clippy]
unnecessary_lazy_evaluations = "allow"

[package]
name = "mujoco-rs"
version = "5.0.0+mj-3.9.0"
edition = "2024"
license.workspace = true
description = "A high-level Rust wrapper around the MuJoCo C library, with a native viewer (re-)written in Rust."
readme = "README.md"
repository.workspace = true
keywords = ["MuJoCo", "Viewer", "Bindings", "Wrapper"]
categories = ["simulation", "science::robotics", "api-bindings"]
homepage = "https://crates.io/crates/mujoco-rs"
documentation = "https://docs.rs/mujoco-rs/"
rust-version.workspace = true

exclude = [
    ".context/",
    ".github/",
    ".gitignore",
    ".gitmodules",
    ".readthedocs.yaml",
    ".vscode/",
    "__pycache__/",
    "assets/",
    "docs/",
    "Dockerfile.ubuntu",
    "MUJOCO_LOG.TXT",
    "mujoco/*",
    "mujoco-rs-derive/",
    "scripts/",
    "tests/",
]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"
path = "examples/simulation/basic.rs"

[[example]]
name = "model_parameters"
path = "examples/simulation/model_parameters.rs"

[[example]]
name = "cpp_viewer"
path = "examples/visualization/viewer/cpp_viewer.rs"
required-features = ["cpp-viewer"]

[[example]]
name = "chaotic_pendulum"
path = "examples/simulation/chaotic_pendulum.rs"
required-features = ["viewer"]

[[example]]
name = "contact_forces"
path = "examples/visualization/renderer/contact_forces.rs"
required-features = ["renderer"]

[[example]]
name = "custom_ui_widgets"
path = "examples/visualization/viewer/custom_ui_widgets.rs"
required-features = ["viewer-ui"]

[[example]]
name = "drawing_scene_renderer"
path = "examples/visualization/renderer/drawing_scene_renderer.rs"
required-features = ["renderer"]

[[example]]
name = "drawing_scene_viewer"
path = "examples/visualization/viewer/drawing_scene_viewer.rs"
required-features = ["viewer"]

[[example]]
name = "ffi_attributes"
path = "examples/simulation/ffi_attributes.rs"
required-features = ["viewer"]

[[example]]
name = "joint_view"
path = "examples/simulation/joint_view.rs"
required-features = ["viewer"]

[[example]]
name = "miri_test"
path = "examples/testing/miri_test.rs"
required-features = ["renderer"]

[[example]]
name = "model_editing"
path = "examples/model_editing/model_editing.rs"
required-features = ["viewer"]

[[example]]
name = "model_switch"
path = "examples/visualization/viewer/model_switch.rs"
required-features = ["viewer"]

[[example]]
name = "multi_legged_creatures"
path = "examples/model_editing/multi_legged_creatures.rs"
required-features = ["viewer"]

[[example]]
name = "procedural_tree"
path = "examples/model_editing/procedural_tree.rs"
required-features = ["viewer"]

[[example]]
name = "renderer"
path = "examples/visualization/renderer/renderer.rs"
required-features = ["renderer"]

[[example]]
name = "rust_viewer"
path = "examples/visualization/viewer/rust_viewer.rs"
required-features = ["viewer-ui"]

[[example]]
name = "rust_viewer_threaded"
path = "examples/visualization/viewer/rust_viewer_threaded.rs"
required-features = ["viewer"]

[[example]]
name = "tendon"
path = "examples/simulation/tendon.rs"
required-features = ["viewer"]

[[example]]
name = "asset_reupload"
path = "examples/visualization/viewer/asset_reupload.rs"
required-features = ["viewer"]

[[example]]
name = "terrain_generation"
path = "examples/model_editing/terrain_generation.rs"
required-features = ["viewer"]

[[example]]
name = "tippe_top"
path = "examples/simulation/tippe_top.rs"
required-features = ["viewer"]

[[example]]
name = "renderer_asset_reupload"
path = "examples/visualization/renderer/renderer_asset_reupload.rs"
required-features = ["renderer"]

[[example]]
name = "touch_sensor"
path = "examples/simulation/touch_sensor.rs"
required-features = ["viewer"]


[features]
viewer = ["dep:bitflags", "dep:glutin", "dep:winit", "dep:glutin-winit", "dep:png", "dep:mujoco-rs-derive"]
viewer-ui = ["viewer", "dep:egui-winit", "dep:egui_glow", "dep:egui"]
renderer = ["dep:bitflags", "dep:glutin", "dep:png"]
renderer-winit-fallback = ["renderer", "dep:winit", "dep:glutin-winit"]
cpp-viewer = []

ffi-regenerate = ["dep:regex", "dep:bindgen"]  # Generate the ffi bindings. Only used for updating the committed ``mujoco_c`` module.

auto-download-mujoco = ["dep:ureq", "dep:flate2", "dep:tar", "dep:zip", "dep:sha2"]

default = []

[dependencies]
bitflags = {version = "2.9.4", optional = true}
png = {version = "0.18.0", optional = true}
paste = "1.0.15"
bytemuck = {version = "1.24.0", features = ["min_const_generics"]}

# Rendering dependencies
glutin = {version = "0.32.3", optional = true}
winit = {version = "0.30.12", optional = true}
glutin-winit = {version = "0.5.0", optional = true}
# Viewer's user interface dependencies
egui-winit = {version = "0.33.0", default-features = false, features = ["wayland", "x11"], optional = true}
egui_glow = {version = "0.33.0", features = ["x11", "winit", "wayland", "egui-winit"], optional = true}
egui = {version = "0.33.0", optional = true}

mujoco-rs-derive = { version = "0.1.0", path = "mujoco-rs-derive", optional = true }

[build-dependencies]
bindgen = {version = "0.71.1", optional = true}
regex = {version = "1.11.2", optional = true}

# Automatic download dependencies
ureq = {version = "3.1.4", optional = true}
sha2 = {version = "0.10.9", optional = true}

[target.'cfg(target_os = "linux")'.build-dependencies]
flate2 = {version = "1.1.5", optional = true}
tar = {version = "0.4.44", optional = true}

[target.'cfg(target_os = "windows")'.build-dependencies]
zip = {version = "6.0.0", default-features = false, features = ["deflate"], optional = true}

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
rand = "0.9.2"

[lints]
workspace = true
