[project]
name = "pyo3_application"
version = "0.1.0"
description = "A Python extension, written in Rust."
requires-python = ">=3.8"

[tool.maturin]
# Optionally enable manylinux compatibility (example here shows GLIBC version 2.31)
# compatibility = "manylinux_2_31"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
